axe-interpreter/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    ABOUT
    DEREFERENCE
    HELP
    GETKEY
    OPEN
    RECT
    LINE
    PXL_TEST
    DRAW
    STRING
    VERTICAL
    DISPGRAPH
    HORIZONTAL
    ELSE
    CLRDRAW
    STATE
    RECTI
    PAUSE
    RETURN
    ELSEIF
    PXL_CHANGE
    PXL_OFF

Grammar

Rule 0     S' -> program
Rule 1     block -> block block
Rule 2     block -> newline block
Rule 3     block -> line
Rule 4     block -> control
Rule 5     newline -> COLON
Rule 6     newline -> NEWLINE
Rule 7     operator -> ADD
Rule 8     operator -> SUB
Rule 9     operator -> MUL
Rule 10    operator -> DIV
Rule 11    operator -> MOD
Rule 12    operator -> LT
Rule 13    operator -> LE
Rule 14    operator -> EQ
Rule 15    operator -> NE
Rule 16    operator -> GT
Rule 17    operator -> GE
Rule 18    newline -> newline newline
Rule 19    control -> IF expression newline block END newline
Rule 20    control -> REPEAT expression newline block END newline
Rule 21    control -> WHILE expression newline block END newline
Rule 22    expression -> expression ASSIGN pointer
Rule 23    expression -> pointer DECREMENT
Rule 24    expression -> pointer INCREMENT
Rule 25    factor -> SUB expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> NUMBER
Rule 28    expression -> tempexpression
Rule 29    factor -> LPAREN factor RPAREN
Rule 30    factor -> expression
Rule 31    factor -> tempexpression
Rule 32    factor -> NUMBER
Rule 33    line -> ID
Rule 34    line -> DISP expression newline
Rule 35    line -> expression newline
Rule 36    line -> factor newline
Rule 37    line -> meta
Rule 38    meta -> DEBUG expression newline
Rule 39    meta -> EXIT newline
Rule 40    control -> FOR LPAREN expression RPAREN newline block END newline
Rule 41    control -> FOR LPAREN pointer COMMA expression COMMA expression RPAREN newline block END newline
Rule 42    expression -> expression operator factor
Rule 43    pointer -> VAR
Rule 44    pointer -> LBRACK expression RBRACK RMODIFIER
Rule 45    pointer -> LBRACK expression RBRACK
Rule 46    program -> program block
Rule 47    program -> block
Rule 48    tempexpression -> CONST
Rule 49    tempexpression -> pointer
Rule 50    tempexpression -> RAND
Rule 51    line -> PXL_ON LPAREN expression COMMA expression RPAREN

Terminals, with rules where they appear

ABOUT                : 
ADD                  : 7
ASSIGN               : 22
CLRDRAW              : 
COLON                : 5
COMMA                : 41 41 51
CONST                : 48
DEBUG                : 38
DECREMENT            : 23
DEREFERENCE          : 
DISP                 : 34
DISPGRAPH            : 
DIV                  : 10
DRAW                 : 
ELSE                 : 
ELSEIF               : 
END                  : 19 20 21 40 41
EQ                   : 14
EXIT                 : 39
FOR                  : 40 41
GE                   : 17
GETKEY               : 
GT                   : 16
HELP                 : 
HORIZONTAL           : 
ID                   : 33
IF                   : 19
INCREMENT            : 24
LBRACK               : 44 45
LE                   : 13
LINE                 : 
LPAREN               : 26 29 40 41 51
LT                   : 12
MOD                  : 11
MUL                  : 9
NE                   : 15
NEWLINE              : 6
NUMBER               : 27 32
OPEN                 : 
PAUSE                : 
PXL_CHANGE           : 
PXL_OFF              : 
PXL_ON               : 51
PXL_TEST             : 
RAND                 : 50
RBRACK               : 44 45
RECT                 : 
RECTI                : 
REPEAT               : 20
RETURN               : 
RMODIFIER            : 44
RPAREN               : 26 29 40 41 51
STATE                : 
STRING               : 
SUB                  : 8 25
VAR                  : 43
VERTICAL             : 
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

block                : 1 1 2 19 20 21 40 41 46 47
control              : 4
expression           : 19 20 21 22 25 26 30 34 35 38 40 41 41 42 44 45 51 51
factor               : 29 36 42
line                 : 3
meta                 : 37
newline              : 2 18 18 19 19 20 20 21 21 34 35 36 38 39 40 40 41 41
operator             : 42
pointer              : 22 23 24 41 49
program              : 46 0
tempexpression       : 28 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (46) program -> . program block
    (47) program -> . block
    (1) block -> . block block
    (2) block -> . newline block
    (3) block -> . line
    (4) block -> . control
    (5) newline -> . COLON
    (6) newline -> . NEWLINE
    (18) newline -> . newline newline
    (33) line -> . ID
    (34) line -> . DISP expression newline
    (35) line -> . expression newline
    (36) line -> . factor newline
    (37) line -> . meta
    (51) line -> . PXL_ON LPAREN expression COMMA expression RPAREN
    (19) control -> . IF expression newline block END newline
    (20) control -> . REPEAT expression newline block END newline
    (21) control -> . WHILE expression newline block END newline
    (40) control -> . FOR LPAREN expression RPAREN newline block END newline
    (41) control -> . FOR LPAREN pointer COMMA expression COMMA expression RPAREN newline block END newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (25) factor -> . SUB expression
    (29) factor -> . LPAREN factor RPAREN
    (30) factor -> . expression
    (31) factor -> . tempexpression
    (32) factor -> . NUMBER
    (38) meta -> . DEBUG expression newline
    (39) meta -> . EXIT newline
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    COLON           shift and go to state 14
    NEWLINE         shift and go to state 12
    ID              shift and go to state 22
    DISP            shift and go to state 2
    PXL_ON          shift and go to state 10
    IF              shift and go to state 23
    REPEAT          shift and go to state 16
    WHILE           shift and go to state 8
    FOR             shift and go to state 17
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 6
    SUB             shift and go to state 4
    DEBUG           shift and go to state 20
    EXIT            shift and go to state 26
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    control                        shift and go to state 1
    tempexpression                 shift and go to state 24
    pointer                        shift and go to state 11
    newline                        shift and go to state 18
    program                        shift and go to state 13
    meta                           shift and go to state 9
    factor                         shift and go to state 15
    line                           shift and go to state 21
    expression                     shift and go to state 27
    block                          shift and go to state 28

state 1

    (4) block -> control .

    COLON           reduce using rule 4 (block -> control .)
    NEWLINE         reduce using rule 4 (block -> control .)
    ID              reduce using rule 4 (block -> control .)
    DISP            reduce using rule 4 (block -> control .)
    PXL_ON          reduce using rule 4 (block -> control .)
    IF              reduce using rule 4 (block -> control .)
    REPEAT          reduce using rule 4 (block -> control .)
    WHILE           reduce using rule 4 (block -> control .)
    FOR             reduce using rule 4 (block -> control .)
    LPAREN          reduce using rule 4 (block -> control .)
    NUMBER          reduce using rule 4 (block -> control .)
    SUB             reduce using rule 4 (block -> control .)
    DEBUG           reduce using rule 4 (block -> control .)
    EXIT            reduce using rule 4 (block -> control .)
    VAR             reduce using rule 4 (block -> control .)
    LBRACK          reduce using rule 4 (block -> control .)
    CONST           reduce using rule 4 (block -> control .)
    RAND            reduce using rule 4 (block -> control .)
    END             reduce using rule 4 (block -> control .)
    $end            reduce using rule 4 (block -> control .)


state 2

    (34) line -> DISP . expression newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 32
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    tempexpression                 shift and go to state 29
    expression                     shift and go to state 31
    pointer                        shift and go to state 11

state 3

    (48) tempexpression -> CONST .

    ASSIGN          reduce using rule 48 (tempexpression -> CONST .)
    COLON           reduce using rule 48 (tempexpression -> CONST .)
    NEWLINE         reduce using rule 48 (tempexpression -> CONST .)
    ADD             reduce using rule 48 (tempexpression -> CONST .)
    SUB             reduce using rule 48 (tempexpression -> CONST .)
    MUL             reduce using rule 48 (tempexpression -> CONST .)
    DIV             reduce using rule 48 (tempexpression -> CONST .)
    MOD             reduce using rule 48 (tempexpression -> CONST .)
    LT              reduce using rule 48 (tempexpression -> CONST .)
    LE              reduce using rule 48 (tempexpression -> CONST .)
    EQ              reduce using rule 48 (tempexpression -> CONST .)
    NE              reduce using rule 48 (tempexpression -> CONST .)
    GT              reduce using rule 48 (tempexpression -> CONST .)
    GE              reduce using rule 48 (tempexpression -> CONST .)
    RPAREN          reduce using rule 48 (tempexpression -> CONST .)
    COMMA           reduce using rule 48 (tempexpression -> CONST .)
    RBRACK          reduce using rule 48 (tempexpression -> CONST .)


state 4

    (25) factor -> SUB . expression
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 32
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    pointer                        shift and go to state 11
    tempexpression                 shift and go to state 29
    expression                     shift and go to state 33

state 5

    (50) tempexpression -> RAND .

    ASSIGN          reduce using rule 50 (tempexpression -> RAND .)
    COLON           reduce using rule 50 (tempexpression -> RAND .)
    NEWLINE         reduce using rule 50 (tempexpression -> RAND .)
    ADD             reduce using rule 50 (tempexpression -> RAND .)
    SUB             reduce using rule 50 (tempexpression -> RAND .)
    MUL             reduce using rule 50 (tempexpression -> RAND .)
    DIV             reduce using rule 50 (tempexpression -> RAND .)
    MOD             reduce using rule 50 (tempexpression -> RAND .)
    LT              reduce using rule 50 (tempexpression -> RAND .)
    LE              reduce using rule 50 (tempexpression -> RAND .)
    EQ              reduce using rule 50 (tempexpression -> RAND .)
    NE              reduce using rule 50 (tempexpression -> RAND .)
    GT              reduce using rule 50 (tempexpression -> RAND .)
    GE              reduce using rule 50 (tempexpression -> RAND .)
    RPAREN          reduce using rule 50 (tempexpression -> RAND .)
    COMMA           reduce using rule 50 (tempexpression -> RAND .)
    RBRACK          reduce using rule 50 (tempexpression -> RAND .)


state 6

    (27) expression -> NUMBER .
    (32) factor -> NUMBER .

  ! reduce/reduce conflict for COLON resolved using rule 27 (expression -> NUMBER .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 27 (expression -> NUMBER .)
  ! reduce/reduce conflict for RPAREN resolved using rule 27 (expression -> NUMBER .)
    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    ASSIGN          reduce using rule 27 (expression -> NUMBER .)
    ADD             reduce using rule 27 (expression -> NUMBER .)
    SUB             reduce using rule 27 (expression -> NUMBER .)
    MUL             reduce using rule 27 (expression -> NUMBER .)
    DIV             reduce using rule 27 (expression -> NUMBER .)
    MOD             reduce using rule 27 (expression -> NUMBER .)
    LT              reduce using rule 27 (expression -> NUMBER .)
    LE              reduce using rule 27 (expression -> NUMBER .)
    EQ              reduce using rule 27 (expression -> NUMBER .)
    NE              reduce using rule 27 (expression -> NUMBER .)
    GT              reduce using rule 27 (expression -> NUMBER .)
    GE              reduce using rule 27 (expression -> NUMBER .)
    COLON           reduce using rule 27 (expression -> NUMBER .)
    NEWLINE         reduce using rule 27 (expression -> NUMBER .)

  ! COLON           [ reduce using rule 32 (factor -> NUMBER .) ]
  ! NEWLINE         [ reduce using rule 32 (factor -> NUMBER .) ]
  ! RPAREN          [ reduce using rule 32 (factor -> NUMBER .) ]


state 7

    (43) pointer -> VAR .

    DECREMENT       reduce using rule 43 (pointer -> VAR .)
    INCREMENT       reduce using rule 43 (pointer -> VAR .)
    ASSIGN          reduce using rule 43 (pointer -> VAR .)
    COLON           reduce using rule 43 (pointer -> VAR .)
    NEWLINE         reduce using rule 43 (pointer -> VAR .)
    ADD             reduce using rule 43 (pointer -> VAR .)
    SUB             reduce using rule 43 (pointer -> VAR .)
    MUL             reduce using rule 43 (pointer -> VAR .)
    DIV             reduce using rule 43 (pointer -> VAR .)
    MOD             reduce using rule 43 (pointer -> VAR .)
    LT              reduce using rule 43 (pointer -> VAR .)
    LE              reduce using rule 43 (pointer -> VAR .)
    EQ              reduce using rule 43 (pointer -> VAR .)
    NE              reduce using rule 43 (pointer -> VAR .)
    GT              reduce using rule 43 (pointer -> VAR .)
    GE              reduce using rule 43 (pointer -> VAR .)
    RPAREN          reduce using rule 43 (pointer -> VAR .)
    RBRACK          reduce using rule 43 (pointer -> VAR .)
    COMMA           reduce using rule 43 (pointer -> VAR .)


state 8

    (21) control -> WHILE . expression newline block END newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 32
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    tempexpression                 shift and go to state 29
    expression                     shift and go to state 34
    pointer                        shift and go to state 11

state 9

    (37) line -> meta .

    END             reduce using rule 37 (line -> meta .)
    COLON           reduce using rule 37 (line -> meta .)
    NEWLINE         reduce using rule 37 (line -> meta .)
    ID              reduce using rule 37 (line -> meta .)
    DISP            reduce using rule 37 (line -> meta .)
    PXL_ON          reduce using rule 37 (line -> meta .)
    IF              reduce using rule 37 (line -> meta .)
    REPEAT          reduce using rule 37 (line -> meta .)
    WHILE           reduce using rule 37 (line -> meta .)
    FOR             reduce using rule 37 (line -> meta .)
    LPAREN          reduce using rule 37 (line -> meta .)
    NUMBER          reduce using rule 37 (line -> meta .)
    SUB             reduce using rule 37 (line -> meta .)
    DEBUG           reduce using rule 37 (line -> meta .)
    EXIT            reduce using rule 37 (line -> meta .)
    VAR             reduce using rule 37 (line -> meta .)
    LBRACK          reduce using rule 37 (line -> meta .)
    CONST           reduce using rule 37 (line -> meta .)
    RAND            reduce using rule 37 (line -> meta .)
    $end            reduce using rule 37 (line -> meta .)


state 10

    (51) line -> PXL_ON . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 35


state 11

    (23) expression -> pointer . DECREMENT
    (24) expression -> pointer . INCREMENT
    (49) tempexpression -> pointer .

    DECREMENT       shift and go to state 36
    INCREMENT       shift and go to state 37
    ASSIGN          reduce using rule 49 (tempexpression -> pointer .)
    COLON           reduce using rule 49 (tempexpression -> pointer .)
    NEWLINE         reduce using rule 49 (tempexpression -> pointer .)
    ADD             reduce using rule 49 (tempexpression -> pointer .)
    SUB             reduce using rule 49 (tempexpression -> pointer .)
    MUL             reduce using rule 49 (tempexpression -> pointer .)
    DIV             reduce using rule 49 (tempexpression -> pointer .)
    MOD             reduce using rule 49 (tempexpression -> pointer .)
    LT              reduce using rule 49 (tempexpression -> pointer .)
    LE              reduce using rule 49 (tempexpression -> pointer .)
    EQ              reduce using rule 49 (tempexpression -> pointer .)
    NE              reduce using rule 49 (tempexpression -> pointer .)
    GT              reduce using rule 49 (tempexpression -> pointer .)
    GE              reduce using rule 49 (tempexpression -> pointer .)
    RPAREN          reduce using rule 49 (tempexpression -> pointer .)
    COMMA           reduce using rule 49 (tempexpression -> pointer .)
    RBRACK          reduce using rule 49 (tempexpression -> pointer .)


state 12

    (6) newline -> NEWLINE .

    COLON           reduce using rule 6 (newline -> NEWLINE .)
    NEWLINE         reduce using rule 6 (newline -> NEWLINE .)
    ID              reduce using rule 6 (newline -> NEWLINE .)
    DISP            reduce using rule 6 (newline -> NEWLINE .)
    PXL_ON          reduce using rule 6 (newline -> NEWLINE .)
    IF              reduce using rule 6 (newline -> NEWLINE .)
    REPEAT          reduce using rule 6 (newline -> NEWLINE .)
    WHILE           reduce using rule 6 (newline -> NEWLINE .)
    FOR             reduce using rule 6 (newline -> NEWLINE .)
    LPAREN          reduce using rule 6 (newline -> NEWLINE .)
    NUMBER          reduce using rule 6 (newline -> NEWLINE .)
    SUB             reduce using rule 6 (newline -> NEWLINE .)
    DEBUG           reduce using rule 6 (newline -> NEWLINE .)
    EXIT            reduce using rule 6 (newline -> NEWLINE .)
    VAR             reduce using rule 6 (newline -> NEWLINE .)
    LBRACK          reduce using rule 6 (newline -> NEWLINE .)
    CONST           reduce using rule 6 (newline -> NEWLINE .)
    RAND            reduce using rule 6 (newline -> NEWLINE .)
    $end            reduce using rule 6 (newline -> NEWLINE .)
    END             reduce using rule 6 (newline -> NEWLINE .)


state 13

    (0) S' -> program .
    (46) program -> program . block
    (1) block -> . block block
    (2) block -> . newline block
    (3) block -> . line
    (4) block -> . control
    (5) newline -> . COLON
    (6) newline -> . NEWLINE
    (18) newline -> . newline newline
    (33) line -> . ID
    (34) line -> . DISP expression newline
    (35) line -> . expression newline
    (36) line -> . factor newline
    (37) line -> . meta
    (51) line -> . PXL_ON LPAREN expression COMMA expression RPAREN
    (19) control -> . IF expression newline block END newline
    (20) control -> . REPEAT expression newline block END newline
    (21) control -> . WHILE expression newline block END newline
    (40) control -> . FOR LPAREN expression RPAREN newline block END newline
    (41) control -> . FOR LPAREN pointer COMMA expression COMMA expression RPAREN newline block END newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (25) factor -> . SUB expression
    (29) factor -> . LPAREN factor RPAREN
    (30) factor -> . expression
    (31) factor -> . tempexpression
    (32) factor -> . NUMBER
    (38) meta -> . DEBUG expression newline
    (39) meta -> . EXIT newline
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    COLON           shift and go to state 14
    NEWLINE         shift and go to state 12
    ID              shift and go to state 22
    DISP            shift and go to state 2
    PXL_ON          shift and go to state 10
    IF              shift and go to state 23
    REPEAT          shift and go to state 16
    WHILE           shift and go to state 8
    FOR             shift and go to state 17
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 6
    SUB             shift and go to state 4
    DEBUG           shift and go to state 20
    EXIT            shift and go to state 26
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    control                        shift and go to state 1
    tempexpression                 shift and go to state 24
    pointer                        shift and go to state 11
    newline                        shift and go to state 18
    meta                           shift and go to state 9
    factor                         shift and go to state 15
    line                           shift and go to state 21
    expression                     shift and go to state 27
    block                          shift and go to state 38

state 14

    (5) newline -> COLON .

    COLON           reduce using rule 5 (newline -> COLON .)
    NEWLINE         reduce using rule 5 (newline -> COLON .)
    ID              reduce using rule 5 (newline -> COLON .)
    DISP            reduce using rule 5 (newline -> COLON .)
    PXL_ON          reduce using rule 5 (newline -> COLON .)
    IF              reduce using rule 5 (newline -> COLON .)
    REPEAT          reduce using rule 5 (newline -> COLON .)
    WHILE           reduce using rule 5 (newline -> COLON .)
    FOR             reduce using rule 5 (newline -> COLON .)
    LPAREN          reduce using rule 5 (newline -> COLON .)
    NUMBER          reduce using rule 5 (newline -> COLON .)
    SUB             reduce using rule 5 (newline -> COLON .)
    DEBUG           reduce using rule 5 (newline -> COLON .)
    EXIT            reduce using rule 5 (newline -> COLON .)
    VAR             reduce using rule 5 (newline -> COLON .)
    LBRACK          reduce using rule 5 (newline -> COLON .)
    CONST           reduce using rule 5 (newline -> COLON .)
    RAND            reduce using rule 5 (newline -> COLON .)
    $end            reduce using rule 5 (newline -> COLON .)
    END             reduce using rule 5 (newline -> COLON .)


state 15

    (36) line -> factor . newline
    (5) newline -> . COLON
    (6) newline -> . NEWLINE
    (18) newline -> . newline newline

    COLON           shift and go to state 14
    NEWLINE         shift and go to state 12

    newline                        shift and go to state 39

state 16

    (20) control -> REPEAT . expression newline block END newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 32
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    tempexpression                 shift and go to state 29
    expression                     shift and go to state 40
    pointer                        shift and go to state 11

state 17

    (40) control -> FOR . LPAREN expression RPAREN newline block END newline
    (41) control -> FOR . LPAREN pointer COMMA expression COMMA expression RPAREN newline block END newline

    LPAREN          shift and go to state 41


state 18

    (2) block -> newline . block
    (18) newline -> newline . newline
    (1) block -> . block block
    (2) block -> . newline block
    (3) block -> . line
    (4) block -> . control
    (5) newline -> . COLON
    (6) newline -> . NEWLINE
    (18) newline -> . newline newline
    (33) line -> . ID
    (34) line -> . DISP expression newline
    (35) line -> . expression newline
    (36) line -> . factor newline
    (37) line -> . meta
    (51) line -> . PXL_ON LPAREN expression COMMA expression RPAREN
    (19) control -> . IF expression newline block END newline
    (20) control -> . REPEAT expression newline block END newline
    (21) control -> . WHILE expression newline block END newline
    (40) control -> . FOR LPAREN expression RPAREN newline block END newline
    (41) control -> . FOR LPAREN pointer COMMA expression COMMA expression RPAREN newline block END newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (25) factor -> . SUB expression
    (29) factor -> . LPAREN factor RPAREN
    (30) factor -> . expression
    (31) factor -> . tempexpression
    (32) factor -> . NUMBER
    (38) meta -> . DEBUG expression newline
    (39) meta -> . EXIT newline
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    COLON           shift and go to state 14
    NEWLINE         shift and go to state 12
    ID              shift and go to state 22
    DISP            shift and go to state 2
    PXL_ON          shift and go to state 10
    IF              shift and go to state 23
    REPEAT          shift and go to state 16
    WHILE           shift and go to state 8
    FOR             shift and go to state 17
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 6
    SUB             shift and go to state 4
    DEBUG           shift and go to state 20
    EXIT            shift and go to state 26
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    control                        shift and go to state 1
    tempexpression                 shift and go to state 24
    pointer                        shift and go to state 11
    newline                        shift and go to state 42
    meta                           shift and go to state 9
    factor                         shift and go to state 15
    line                           shift and go to state 21
    expression                     shift and go to state 27
    block                          shift and go to state 43

state 19

    (26) expression -> LPAREN . expression RPAREN
    (29) factor -> LPAREN . factor RPAREN
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (25) factor -> . SUB expression
    (29) factor -> . LPAREN factor RPAREN
    (30) factor -> . expression
    (31) factor -> . tempexpression
    (32) factor -> . NUMBER
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 6
    SUB             shift and go to state 4
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    pointer                        shift and go to state 11
    tempexpression                 shift and go to state 24
    expression                     shift and go to state 44
    factor                         shift and go to state 45

state 20

    (38) meta -> DEBUG . expression newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 32
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    tempexpression                 shift and go to state 29
    expression                     shift and go to state 46
    pointer                        shift and go to state 11

state 21

    (3) block -> line .

    COLON           reduce using rule 3 (block -> line .)
    NEWLINE         reduce using rule 3 (block -> line .)
    ID              reduce using rule 3 (block -> line .)
    DISP            reduce using rule 3 (block -> line .)
    PXL_ON          reduce using rule 3 (block -> line .)
    IF              reduce using rule 3 (block -> line .)
    REPEAT          reduce using rule 3 (block -> line .)
    WHILE           reduce using rule 3 (block -> line .)
    FOR             reduce using rule 3 (block -> line .)
    LPAREN          reduce using rule 3 (block -> line .)
    NUMBER          reduce using rule 3 (block -> line .)
    SUB             reduce using rule 3 (block -> line .)
    DEBUG           reduce using rule 3 (block -> line .)
    EXIT            reduce using rule 3 (block -> line .)
    VAR             reduce using rule 3 (block -> line .)
    LBRACK          reduce using rule 3 (block -> line .)
    CONST           reduce using rule 3 (block -> line .)
    RAND            reduce using rule 3 (block -> line .)
    END             reduce using rule 3 (block -> line .)
    $end            reduce using rule 3 (block -> line .)


state 22

    (33) line -> ID .

    END             reduce using rule 33 (line -> ID .)
    COLON           reduce using rule 33 (line -> ID .)
    NEWLINE         reduce using rule 33 (line -> ID .)
    ID              reduce using rule 33 (line -> ID .)
    DISP            reduce using rule 33 (line -> ID .)
    PXL_ON          reduce using rule 33 (line -> ID .)
    IF              reduce using rule 33 (line -> ID .)
    REPEAT          reduce using rule 33 (line -> ID .)
    WHILE           reduce using rule 33 (line -> ID .)
    FOR             reduce using rule 33 (line -> ID .)
    LPAREN          reduce using rule 33 (line -> ID .)
    NUMBER          reduce using rule 33 (line -> ID .)
    SUB             reduce using rule 33 (line -> ID .)
    DEBUG           reduce using rule 33 (line -> ID .)
    EXIT            reduce using rule 33 (line -> ID .)
    VAR             reduce using rule 33 (line -> ID .)
    LBRACK          reduce using rule 33 (line -> ID .)
    CONST           reduce using rule 33 (line -> ID .)
    RAND            reduce using rule 33 (line -> ID .)
    $end            reduce using rule 33 (line -> ID .)


state 23

    (19) control -> IF . expression newline block END newline
    (22) expression -> . expression ASSIGN pointer
    (23) expression -> . pointer DECREMENT
    (24) expression -> . pointer INCREMENT
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . tempexpression
    (42) expression -> . expression operator factor
    (43) pointer -> . VAR
    (44) pointer -> . LBRACK expression RBRACK RMODIFIER
    (45) pointer -> . LBRACK expression RBRACK
    (48) tempexpression -> . CONST
    (49) tempexpression -> . pointer
    (50) tempexpression -> . RAND

    LPAREN          shift and go to state 30
    NUMBER          shift and go to state 32
    VAR             shift and go to state 7
    LBRACK          shift and go to state 25
    CONST           shift and go to state 3
    RAND            shift and go to state 5

    tempexpression                 shift and go to state 29
    expression                     shift and go to state 47
    pointer                        shift and go to state 11

state 24

    (28) expression -> tempexpression .
    (31) factor -> tempexpression .
